# xivapi-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci-pytest.yml  publish-pypi.yml
src/pyxivapi/: __init__.py  client.py  utils.py
src/pyxivapi/lib/: assets.py  models.py  sheets.py  versions.py
tests/: test_pyxivapi.py
